# u.leti.9892.3sem-2020.programming.3lab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmd.cpp  cmd.h  input.h  main.cpp  truck.h  truck_db.h  truckdb2.csv
report/: report_lr3.tex
report/modules/: inputs.tex  title_page.tex
report/modules/chapters/: conclusion.tex  data_structures_description.tex  files_formats.tex  functions_description.tex  goal.tex  listing.tex  programm_algorithm.tex  task_defenition.tex  tests.tex
report/modules/inputs/: cppcode.tex  general.tex  pictures.tex
report/resourses/: class_diagram.drawio  list_schema.drawio
src/: cmd.cpp  cmd.h  input.cpp  main.cpp  truck.h  truck_db.cpp  truck_db.h  truck_list.h
truck/: lib_truck.h  truck.cpp  truck_db.cpp  truck_db.h  truck_list.cpp  truck_list.h
